# scrapfly-scrapers

./: .gitignore  README.md  readme.md
aliexpress-scraper/: README.md  aliexpress.py  pyproject.toml  run.py  test.py
allegro-scraper/: README.md  allegro.py  pyproject.toml  run.py  test.py
amazon-scraper/: README.md  amazon.py  pyproject.toml  run.py  test.py
autoscout24-scraper/: README.md  autoscout24.py  pyproject.toml  run.py  test.py
bestbuy-scraper/: README.md  bestbuy.py  pyproject.toml  run.py  test.py
bing-scraper/: README.md  bing.py  pyproject.toml  run.py  test.py
bookingcom-scraper/: README.md  bookingcom.py  pyproject.toml  run.py  test.py
chatgpt-scraper/: README.md  chatgpt.py  pyproject.toml  run.py  test.py
crunchbase-scraper/: README.md  crunchbase.py  pyproject.toml  run.py  test.py
domaincom-scraper/: README.md  domaincom.py  pyproject.toml  run.py  test.py
ebay-scraper/: README.md  ebay.py  pyproject.toml  run.py  test.py
etsy-scraper/: README.md  etsy.py  pyproject.toml  run.py  test.py
facebook-scraper/: README.md  facebook.py  pyproject.toml  run.py  test.py
fashionphile-scraper/: README.md  fashionphile.py  pyproject.toml  run.py  test.py
g2-scraper/: README.md  g2.py  pyproject.toml  run.py  test.py
glassdoor-scraper/: README.md  glassdoor.py  pyproject.toml  run.py  test.py
goat-scraper/: README.md  goat.py  pyproject.toml  run.py  test.py
realestatecom-scraper/: README.md  pyproject.toml  realestate.py  run.py  test.py
realestatecom-scraper/results/: properties.json  search.json
threads-scraper/: README.md  pyproject.toml  run.py  test.py  threads.py
threads-scraper/results/: profile.json  thread.json
(+447 files in other folders)
